--- a/app/src/main/res/drawable/bg_button_selected.xml
+++ b/app/src/main/res/drawable/bg_button_selected.xml
@@ -3,4 +3,7 @@
     android:shape="rectangle">
     <solid android:color="#8666d7" />
     <corners android:radius="10dp" />
+    <padding
+        android:bottom="5dp"
+        android:top="5dp" />
 </shape>
